desktop_and_mobile

--- a/app/mobile_photo.html
+++ b/app/mobile_photo.html
@@ -11,7 +11,6 @@
 
     <body>
         <div class="wrapper">
-           
             <header class="header">
                 <div class="container">
                     <nav class="header__nav">
@@ -36,7 +35,7 @@
                         <p class="photo-offer__title_highlighting"> МОБИЛЬНОЙ ФОТОГРАФИИ </p>
                     </h1>
                     <div class="photo-offer__subtitle text">
-                        Научим снимать цепляющие фото для бизнеса <br> и экспертного блога
+                        Научим снимать цепляющие фото для бизнеса и экспертного блога
                     </div>
                     <a href="" class="photo-offer__btn btn btn_main"> 
                         Купить курс
@@ -65,7 +64,7 @@
             <div class="photo-conditions">
                 <div class="container">
                     <div class="orange-arrow">
-                        <h2 class="photo-conditions__title blue-cam title"> Наши курсы для тебя если </h2>
+                        <h2 class="photo-conditions__title blue-cam title"> Наши курсы для тебя&nbsp;если </h2>
                     </div>
                     <div class="photo-conditions__list text-block">
                         <div class="photo-conditions__list-item photo-condition text-box">
@@ -82,12 +81,12 @@
                         </div>
                         <div class="photo-conditions__list-item photo-condition text-box">
                             <img class="photo-condition__img" src="images/smile_4.png" alt="">
-                            <h3 class="photo-condition__title title"> Не знаете как делать крутые фото <br> при скудном освещении <br> и в “не инстаграмном” помещении </h3>
+                            <h3 class="photo-condition__title title"> Не знаете как делать крутые фото <br> при скудном освещении и в “не&nbsp;инстаграмном” помещении </h3>
                         </div>
                     </div>
                     <h2 class="photo-conditions__sub title"> То наш курс — 
-                        <p class="photo-conditions__sub_highlighting"> ваше лучшее вложение </p> 
-                        в продвижение своих товаров и услуг на любой площадке 
+                        <p class="photo-conditions__sub_highlighting"> ваше&nbsp;лучшее вложение </p> 
+                        в продвижение своих товаров и услуг на&nbsp;любой площадке 
                     </h2>
                 </div>
             </div>
@@ -290,6 +289,7 @@
                                 <div class="plan__btn btn btn_main">Купить в рассрочку</div>
                             </div>
                             <div class="plan__description text">
+                                <h3 class="plan__description-title title">Теория</h3>
                                 <ul class="plan__components">
                                     <li>3 модуля</li>
                                     <li>13 уроков</li>
@@ -344,6 +344,7 @@
                                 <div class="plan__btn btn btn_main">Купить в рассрочку</div>
                             </div>
                             <div class="plan__description text">
+                                <h3 class="plan__description-title title">Теория</h3>
                                 <ul class="plan__components">
                                     <li>3 модуля</li>
                                     <li>13 уроков</li>
@@ -402,6 +403,7 @@
                                 <div class="plan__btn btn btn_main">Купить в рассрочку</div>
                             </div>
                             <div class="plan__description text">
+                                <h3 class="plan__description-title title">Теория</h3>
                                 <ul class="plan__components">
                                     <li>3 модуля</li>
                                     <li>13 уроков</li>
@@ -650,7 +652,7 @@
                                 <img class="footer__social-img" src="images/icon_fb.png" alt="">
                             </div>
                         </div>
-                        <div class="footer__about text"> О нас </div>
+                        <div class="footer__about text"> О&nbsp;нас </div>
                         <ul class="footer__courses">
                             <a class="footer__course text" href="mobile_photo.html"> Курс мобильной фотографии </a>
                             <a class="footer__course text" href="mobile_video.html"> Курс мобильной видеосъемки и монтажа </a>
